Added more event listner for improvement

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="scroll">
         <h1 class="time"></h1>
-        <img src="arrow-drop-down-line (1).png" alt="">
+        <img class="dropDown" src="arrow-drop-down-line (1).png" alt="">
     </div>
     <div class="Pass-screen">
         <form>
